# skynet

./: .gitignore  README.md  SKYJO_ENVIRONMENT.md  auction_env.py  auction_mcts.py  auction_model.py  auction_train.py  belief_muzero_mcts.py  belief_muzero_model.py  belief_muzero_train.py  collect_latent_states.py  compare_auction.py  compare_muzero_architectures.py  heuristic_bots.py  latent_analysis.sbatch  main.py  muzero_baseline.sbatch  muzero_belief.sbatch  muzero_head_to_head.sbatch  muzero_mcts.py  muzero_model.py  muzero_train.py  plot_probe_by_iteration.py  pyproject.toml  run_belief_ablation_study.py  run_h2h_ablation_study.py  skyjo_decision_env.py  skyjo_env.py  train_auction_belief_muzero.py  train_auction_muzero.py  train_belief_muzero.py  train_muzero.py  visualize_latent_space.py
web/: README.md  __init__.py  run_dev.py
web/backend/: __init__.py  agent_service.py  checkpoints.py  game_manager.py  main.py  schemas.py  state_codec.py
web/backend/tests/: test_api.py
web/frontend/: package-lock.json
web/frontend/src/: App.css  App.test.tsx  App.tsx  index.css
